--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "cycling-pedal-power-display",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "src/index.js",
+  "main": "src/javascript/index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
